--- a/index.html
+++ b/index.html
@@ -2590,10 +2590,10 @@ body.overlay-open {
 		  <input id="cust-preferred-time" name="preferred_time" type="datetime-local" class="input" step="300">
 
 		
-		<label style="display:flex;align-items:center;gap:6px;margin-top:4px;">
+		<!--<label style="display:flex;align-items:center;gap:6px;margin-top:4px;">
 			<input type="checkbox" id="cust-asap" name="asap_requested">
 			As soon as possible
-		  </label>
+		  </label>-->
 
 		  <div class="muted small">
 			Choose a time, or tick “As soon as possible” and we’ll offer you the earliest available time within our opening days (Weds to Sun, 17:00 - 21:00).
@@ -6082,6 +6082,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
