Removing ASAP for remainder of day

--- a/index.html
+++ b/index.html
@@ -2591,7 +2591,7 @@ body.overlay-open {
 
 		
 		<label style="display:flex;align-items:center;gap:6px;margin-top:4px;">
-			<input type="checkbox" id="cust-asap" name="asap_requested">
+			<!--<input type="checkbox" id="cust-asap" name="asap_requested">-->
 			As soon as possible
 		  </label>
 
@@ -6082,6 +6082,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
