--- a/index.html
+++ b/index.html
@@ -5648,11 +5648,11 @@ console.log = console.info = console.debug = console.warn = console.error = cons
 
 // ---- Temporary closure override (edit when needed) ----
 const tempClosure = {
-  active: false, // ✅ set true when temporarily closed
+  active: true, // ✅ set true when temporarily closed
   title: "Temporarily closed",
-  message: "We are now closed for a short pre-planned break. Apologies for any inconvenience this may cause.",
+  message: "We are temporarily closed due to a hand injury sustained by Chef Rung. Apologies for any inconvenience this may cause.",
   // Optional reopen time shown to customers (UK local time)
-  reopenText: "We will reopen on Wednesday 21st Janury at 17:00. Happy New Year to all of our amazing customers!",
+  reopenText: "We hope to reopen on Friday 20th Feb at 17:00. Thanks for your understanding and continued support!",
   // Behaviour
   autoHideMs: null, // null = don't auto-hide; e.g. 10000 to auto-hide
   blockOrdering: true
@@ -6082,6 +6082,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
