Head Chef Rung!

--- a/index.html
+++ b/index.html
@@ -5650,7 +5650,7 @@ console.log = console.info = console.debug = console.warn = console.error = cons
 const tempClosure = {
   active: true, // ✅ set true when temporarily closed
   title: "Temporarily closed",
-  message: "We are temporarily closed due to a hand injury sustained by Chef Rung. Apologies for any inconvenience this may cause.",
+  message: "We are temporarily closed due to an injury sustained by Head Chef Rung! Apologies for any inconvenience this may cause.",
   // Optional reopen time shown to customers (UK local time)
   reopenText: "We hope to reopen on Friday 20th Feb at 17:00. Thanks for your understanding and continued support!",
   // Behaviour
@@ -6082,6 +6082,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
