--- a/index.html
+++ b/index.html
@@ -5648,7 +5648,7 @@ console.log = console.info = console.debug = console.warn = console.error = cons
 
 // ---- Temporary closure override (edit when needed) ----
 const tempClosure = {
-  active: true, // ✅ set true when temporarily closed
+  active: false, // ✅ set true when temporarily closed
   title: "Temporarily closed",
   message: "We are temporarily closed due to an injury sustained by Head Chef Rung! Apologies for any inconvenience this may cause.",
   // Optional reopen time shown to customers (UK local time)
@@ -6082,6 +6082,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
